--- a/nyt-article.css
+++ b/nyt-article.css
@@ -3,6 +3,11 @@ body {
   box-sizing: border-box;
 }
 
+p a {
+  text-decoration: underline;
+  color: #326891;
+}
+
 .top-nav {
   background: white;
   z-index: 999;
@@ -85,10 +90,10 @@ body {
 
 .headline {
   line-height: 1.1;
-  width: 365.672px;
+  width: 370.672px;
   position: relative;
   left: 32%;
-  font-size: 2em;
+  font-size: 2.35em;
   font-family: 'NYTCheltenham';
   font-style: italic;
   font-weight: 700;
@@ -109,10 +114,12 @@ body {
 }
 
 .article-img-caption {
+  font-family: nyt-imperial,georgia,'times new roman',times,serif;
   color: #666;
-  font-size: 0.9rem;
+  font-size: 1rem;
   margin-top: 10px;
   width: 850px;
+  line-height: 1.2;
   margin-left: 350px;
 }
 
@@ -155,11 +162,17 @@ ul {
   float: right;
 }
 
-li {
+.right-share li {
   display: inline;
 }
 
-svg {
+.share-btn {
+  display: inline;
+}
+
+.share-btn svg {
+  margin-left: 5px;
+  margin-right: 5px;
   height: 15px;
   width: 15px;
   background-color: #eee;
@@ -237,6 +250,8 @@ h3 {
   width: 155px;
 }
 
+/* Special Content */
+
 .content-four {
   margin-top: 80px;
 }
@@ -244,7 +259,7 @@ h3 {
 .content-four h1 {
   font-family: 'NYTCheltenham';
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .content-four p {
@@ -297,4 +312,432 @@ h3 {
   position: absolute;
   top: 120px;
   left: 555px;
+}
+
+.text-desc5 {
+  position: absolute;
+  top: 440px;
+}
+
+.text-desc6 {
+  position: absolute;
+  left: 180px;
+  top: 440px;
+}
+
+.text-desc7 {
+  position: absolute;
+  right: 180px;
+  top: 440px;
+}
+
+.text-desc8 {
+  position: absolute;
+  top: 440px;
+  left: 555px;
+}
+
+#special-content-footer::before {
+  width: 60px;
+  content: '';
+  display: inline-block;
+  height: 1px;
+  margin: 0 0 13px;
+  background-color: #000;
+}
+
+#special-content-footer p {
+  margin-bottom: 50px;
+  font-size: 0.88rem;
+  letter-spacing: 0;
+}
+
+.youtube-vid figcaption {
+  margin-top: 10px;
+  width: 500px;
+  font-family: nyt-imperial,georgia,'times new roman',times,serif;
+  color: #666;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+.credit {
+  font-size: 0.8rem;
+}
+
+.img720 {
+  position: relative;
+  width: 720px;
+  margin-left: calc((100% - 720px) / 2);
+}
+
+.img720 img {
+  width: 100%;
+}
+
+.img720 figcaption {
+  margin-top: 10px;
+  font-family: nyt-imperial,georgia,'times new roman',times,serif;
+  color: #666;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
+#article-footer {
+  font-size: 12px;
+  color: #999;
+  line-height: 0.9rem;
+  width: 630px;
+  margin-left: calc((100% - 630px) / 2)
+}
+
+#share-btn-footer {
+  margin-top: 25px;
+}
+
+/* After article section */
+
+.after-article {
+  position: relative;
+  margin-top: 100px;
+  height: 1086.25px;
+  width: 1145;
+  margin-left: calc((100% - 1145px) / 2)
+}
+
+.more-heading {
+  padding-top: 17px;
+  padding-bottom: 17px;
+  background-color: #fff;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  font-family: nyt-franklin,helvetica,arial,sans-serif;
+  font-weight: 700;
+  font-size: .86rem;
+  line-height: 1.2rem;
+  border-top: 1px solid #000;
+  width: 100%;
+  max-width: 851.25px;
+}
+
+.more-article {
+  margin-top: 5px;
+  width: 272.63px;
+  height: 298.75px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.more-img img {
+  width: 272.63px;
+}
+
+.more-credit {
+  text-align: right;
+  margin-top: 5px;
+  font-size: 10px;
+  color: #999;
+}
+
+.more-text {
+  margin-top: 10px;
+  width: 262.63px;
+  font-family: 'NYTCheltenham';
+  font-size: 19px;
+  line-height: 22px;
+  color: #121212;
+}
+
+.more-text .date {
+  margin-top: 5px;
+  font-size: 13px;
+  display: block;
+  letter-spacing: .3px;
+  color: #999;
+}
+
+.aside-more {
+  height: 1064.25px;
+  width: 263px;
+  position: absolute;
+  top: 0;
+  left: 880px;
+}
+
+.trending {
+  border-top: 1px solid #000;
+  font-family: nyt-franklin,helvetica,arial,sans-serif;
+  font-weight: 700;
+  font-size: .86rem;
+  padding: 15px;
+}
+
+.trending-list {
+  list-style: none;
+  border-top: 1px solid #e2e2e2;
+  margin-top: 15px;
+}
+
+.trending-item {
+  border-bottom: 1px solid #e2e2e2;
+  padding: 15px 0; 
+}
+
+.trending-item a {
+  line-height: 1.25rem;
+  font-family: nyt-cheltenham,georgia,times new roman,times,serif;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #121212;
+  text-decoration: none;
+}
+
+.editor-pick {
+  margin-top: 25px;
+}
+
+.signup {
+  display: flex;
+  flex-direction: row;
+  border-top: 1px solid black;
+  padding-top: 15px;
+  height: 249px;
+  margin-left: auto;
+  margin-right: auto;
+  width: calc(100% - 40px);
+  max-width: 1145px;
+}
+
+.signup-text {
+  box-sizing: border-box;
+  width: 351.92px;
+  height: 228px;
+}
+
+.signup-heading {
+  color: black;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 1.2rem;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 1.1625rem;
+  margin-bottom: 5px;
+}
+
+.subheading {
+  color: rgb(102, 102, 102);
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 0.95rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.1625rem;
+  margin-bottom: 10px;
+  margin-left: 0px;
+}
+
+.signup-form {
+  display: inline-block;
+  width: 471.09px;
+  height: 228px;
+}
+
+input[type="email"] {
+  box-sizing: border-box;
+  width: 100%;
+  display: block;
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  height: 40px;
+  line-height: 15px;
+  position: relative;
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(226, 226, 226);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 4px 4px 4px 8px;
+}
+
+input[type="checkbox"] {
+  margin-top: 20px;
+}
+
+label[for="checkbox"] {
+  font-size: 0.75rem;
+}
+
+#submit-button:hover {
+  background-color: rgb(86, 119, 145);
+  color: rgb(255, 255, 255);
+}
+
+#submit-button {
+  margin-top: 20px;
+  color: rgb(98, 136, 165);
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 700;
+  height: auto;
+  line-height: 13px;
+  margin-bottom: 10px;
+  text-transform: none;
+  width: 100%;
+  background: rgb(255, 255, 255);
+  border-width: 1px;
+  border-style: solid;
+  border-color: rgb(98, 136, 165);
+  border-image: initial;
+  border-radius: 4px;
+  padding: 10px;
+}
+
+.signup-links {
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  color: rgb(102, 102, 102);
+  font-size: 0.6em;
+  line-height: 2;
+}
+
+.footer-container {
+  width: 1200px;
+  margin: 0px auto;
+  padding: 0px 3% 9px;
+  height: 500px;
+}
+
+.footer-container::before {
+  content: "";
+  display: block;
+  height: 1px;
+  margin-top: 0px;
+  border-bottom: 1px solid rgb(226, 226, 226);
+  border-top: 2px solid rgb(226, 226, 226);
+}
+
+.footer-heading {
+  margin-top: 10px;
+  width: 100%;
+  height: 44px;
+}
+
+.footer-link a {
+  color: rgb(98, 136, 165);
+  font-family: nyt-franklin;
+  font-size: 11px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 11px;
+  text-decoration: none;
+  float:right;
+}
+
+.footer-list-container {
+  padding-bottom: 15px;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid rgb(226, 226, 226);
+}
+
+.footer-list {
+  box-sizing: border-box;
+  flex: 1 1 0%;
+  width: 197.33px;
+  height: 349px;
+}
+
+.list-heading {
+  color: rgb(51, 51, 51);
+  font-size: 13px;
+  font-weight: 700;
+  font-family: nyt-franklin;
+  height: 25px;
+  line-height: 15px;
+  text-transform: uppercase;
+  width: 150px;
+  margin: 0px;
+}
+
+.main-list {
+  width: 197.33px;
+}
+
+.list-item {
+  margin-top: 5px;
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: nyt-franklin;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 14px;
+  font-weight: 400;
+  height: 23px;
+  line-height: 16px;
+  text-decoration: none;
+}
+
+.big-list-items {
+  margin-bottom: 5px;
+  white-space: nowrap;
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: nyt-franklin;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 16px;
+  font-weight: 700;
+  height: 25px;
+  line-height: 15px;
+  padding-bottom: 0px;
+  text-decoration: none;
+}
+
+.big-list-items svg {
+  display: inline-block;
+  height: 13px;
+  width: 13px;
+  margin-right: 7px;
+  vertical-align: middle;
+}
+
+.small-list {
+  margin-top: 120px;
+}
+
+.small-list-items {
+  color: rgb(0, 0, 0);
+  display: inline-block;
+  font-family: nyt-franklin;
+  text-transform: capitalize;
+  width: 150px;
+  font-size: 11px;
+  font-weight: 500;
+  height: 23px;
+  line-height: 21px;
+  text-decoration: none;
+}
+
+#right-list {
+  padding-left: 15px;
+  border-left: 1px solid rgb(226, 226, 226);
+  flex: 1 1 0%;
+}
+
+
+.footer-most-list {
+  margin-left: 120px;
+}
+
+.footer-most-list li {
+  margin-left: 9px;
+  margin-right: 9px;
+  font-size: 10px;
+  display: inline-block;
+  color: rgb(153, 153, 153);
+  font-family: nyt-franklin, helvetica, arial, sans-serif;
+  white-space: nowrap;
+  padding: 10px 0px;
+  text-decoration: none;
 }
